# lilt-training

./: .gitignore  README.md  main.py  pyproject.toml
src/lilt_ocr/: __init__.py  data.py  dataloader.py  labels.py  predict.py  train.py
