[project]
name = "lilt-ocr"
version = "0.1.0"
description = "LiLT(XLM-RoBERTa) head 파인튜닝 — 세금계산서 KIE"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "torch",
    "transformers",
    "datasets",
    "accelerate",
    "scikit-learn",
    "pillow",
    "numpy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lilt_ocr"]
